--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
-    "canvas": "^2.9.3"
+    "canvas": "^2.9.3",
+    "esm": "^3.2.25"
   }
 }
